IGNITE-WC-378. FF css fix for truncated text.

--- a/modules/web-console/frontend/app/components/list-of-registered-users/list-of-registered-users.scss
+++ b/modules/web-console/frontend/app/components/list-of-registered-users/list-of-registered-users.scss
@@ -17,6 +17,18 @@
 
 ignite-list-of-registered-users {
   display: block;
+
+  .user-cell {
+    display: flex;
+    overflow-wrap: normal;
+    white-space: normal;
+
+    label {
+      height: 22px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
 
 .list-of-registered-users {
